# Rainbar

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  plugin.cpp
src/raiseWindow/: raiseWindow.cpp  raiseWindow.h
